--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -6,7 +6,7 @@
             <div class="row">
 
                 <div class="col-md-5">
-                    <img src="{% if product.image %} {{ product.image.url }} {% else %} {% static 'img/default.jpg' %} {% endif %}" class="img-responsive" alt="...">
+                    <img src="{% if product.image %} {{ product.image.url }} {% else %} {{product.img_url}} {% endif %}" class="img-responsive" alt="...">
 
                 </div>
                 <div class="col-md-7 individualproduct">
@@ -58,7 +58,7 @@
         <div class="col-md-3">
             <div class="recomendation">
                 <a href="{{p.get_absolute_url}}">
-                    <img src="{% if p.image %} {{ p.image.url }} {% else %} {% static 'img/default.jpg' %} {% endif %}" class="img-thumbnail" alt="...">
+                    <img src="{% if p.image %} {{ p.image.url }} {% else %} {{p.img_url}} {% endif %}" class="img-thumbnail" alt="...">
                 </a>
                 <h4>{{p.name}}</h4>
                 <p class="cash"><i class="fas fa-dollar-sign"></i>
