--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -32,7 +32,7 @@
                       <div class="col-md-4">
                         <div class="thumbnail">
                             <a href="{{ product.get_absolute_url }}">
-                                <img src="{% if product.image %} {{ product.image.url }} {% else %} {% static 'img/default.jpg' %} {% endif %}" alt="..." class="img-thumbnail">
+                                <img src="{% if product.image %} {{ product.image.url }} {% else %} {{product.img_url}} {% endif %}" alt="..." class="img-thumbnail">
                             </a>
                             <div class="caption">
                                 <h3 class="text-center">
